test/lit/pto/tilebuf_invalid_boxed_rows_divisibility.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// CHECK: error: tile_buf boxed layout requires rows to be divisible by inner_rows

func.func @test_boxed_rows_divisibility() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %tb = pto.alloc_tile : !pto.tile_buf<loc=left, dtype=f16, rows=17, cols=32, v_row=17, v_col=32, blayout=row_major, slayout=row_major, fractal=512, pad=0>
  return
}